correction bug menu burger , ajout icon , correction bug en mobil , dark mode sur le projet mobil

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -486,6 +486,20 @@ main {
         border-radius: 15px;
       }
 
+      body.dark-mode & {
+        .panel {
+          color: white;
+          background-color: $background-color-night;
+        }
+        .github {
+          color: white;
+
+          a {
+            color: white;
+          }
+        }
+      }
+
       p {
         padding: 1rem 0rem;
       }
@@ -630,6 +644,8 @@ main {
           width: 100%;
           display: flex;
           justify-content: center;
+          align-items: center;
+          padding: 0rem 0rem;
         }
       }
     }
